--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -4,8 +4,32 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section name="log4net"
+
+    type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+  </configSections>
+
+  <log4net>
+    <appender name="TestAppender"
+
+    type="log4net.Appender.RollingFileAppender" >
+      <file value="log.txt" />
+      <encoding value="utf-8" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level [%thread] %type.%method - %message%n" />
+      </layout>
+    </appender>
+    <root>
+      <level value="All" />
+      <appender-ref ref="TestAppender" />
+    </root>
+  </log4net>
+
   <connectionStrings>
-    <!--Colocar Connection String-->  
+    <add name="connStr" connectionString="data source=DESKTOP-0K5I2T1\SQLEXPRESS; initial catalog=db_rakuten;persist security info=True; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
