--- a/Rakuten.Test/Rakuten.Test.Web/Web.config
+++ b/Rakuten.Test/Rakuten.Test.Web/Web.config
@@ -16,6 +16,9 @@
       </controls>
     </pages>
   </system.web>
+  <appSettings>
+    <add key="PastaLog" value="C:\Temp\Log"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
