--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--Colocar Connection String-->  
+    <add name="connStr" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Test;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
