--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
+    <add name="connStr" connectionString="server=AUGUSTO-PC;database=Rakuten;Integrated Security=True" />
     <!--Colocar Connection String-->  
   </connectionStrings>
   <system.web>
