--- a/Rakuten.Test/Rakuten.Test.Web/Web.config
+++ b/Rakuten.Test/Rakuten.Test.Web/Web.config
@@ -4,6 +4,26 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+  </configSections>
+  <log4net>
+    <appender name="TestAppender" type="log4net.Appender.RollingFileAppender" >
+      <file value="C:\Users\AUGUSTO\Documents\GitHub\backend-developer-test\Rakuten.Test\Log\_LOG.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="100KB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="TestAppender" />
+    </root>
+  </log4net>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -30,12 +50,12 @@
   </runtime>
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="UserSoap" />
-      </basicHttpBinding>
+        <basicHttpBinding>
+            <binding name="UserSoap" />
+        </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:50189/User.asmx" binding="basicHttpBinding" bindingConfiguration="UserSoap" contract="UserService.UserSoap" name="UserSoap" />
+        <endpoint address="http://localhost:50189/User.asmx" binding="basicHttpBinding" bindingConfiguration="UserSoap" contract="UserService.UserSoap" name="UserSoap" />
     </client>
   </system.serviceModel>
 </configuration>
