--- a/Rakuten.Test/Rakuten.Test.Web/bin/Rakuten.Test.Web.dll.config
+++ b/Rakuten.Test/Rakuten.Test.Web/bin/Rakuten.Test.Web.dll.config
@@ -15,7 +15,11 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-  </system.web>
+   <sessionState mode="Custom" customProvider="SqlInMemoryProvider">
+      <providers>
+        <add name="SqlInMemoryProvider" type="Microsoft.Web.SessionState.SqlInMemoryProvider" connectionString="data source=sqlserver;initial catalog=ASPStateInMemory;User ID=user;Password=password;" />
+      </providers>
+    </sessionState></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -28,6 +32,32 @@
       </dependentAssembly>      
     </assemblyBinding>
   </runtime>
+  <root>
+    <level value="INFO"/>
+    <appender-ref ref="FileAppender"/>
+    <appender-ref ref="ConsoleAppender" />
+  </root>
+  <logger name="Log4NetTest.MacClass">
+    <level value="DEBUG"/>
+    <appender-ref ref="ConsoleAppender"/>
+  </logger>
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="c:\dados\log.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="3" />
+      <maximumFileSize value="150KB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] – %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
+  <configSections>
+    <section name="log4net"
+      type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>    
+  </configSections>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
