--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--Colocar Connection String-->  
+    <add name="connStr" connectionString="server=localhost;database=myDb;uid=myUser;password=myPass;" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
