--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--Colocar Connection String-->  
+    <add name="connStr" connectionString="Server=.\SQLExpress;Database=rakuten;Trusted_Connection=True;" providerName="System.Sql" />
+    <!--Colocar Connection String-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
