--- a/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="connStr" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=Store;Data Source=(LOCAL)" providerName="System.Data.SqlClient"></add>
+    <add name="connStr" connectionString="Server=.\SQLExpress;Database=rakuten;Trusted_Connection=True;" providerName="System.Sql" />
+    <!--Colocar Connection String-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
