--- a/Rakuten.Test/Rakuten.Test.Web/bin/Rakuten.Test.Web.dll.config
+++ b/Rakuten.Test/Rakuten.Test.Web/bin/Rakuten.Test.Web.dll.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -38,4 +43,21 @@
       <endpoint address="http://localhost:50189/User.asmx" binding="basicHttpBinding" bindingConfiguration="UserSoap" contract="UserService.UserSoap" name="UserSoap" />
     </client>
   </system.serviceModel>
+ 
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="C:/Pessoal/log.txt"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="1MB"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.SimpleLayout"/>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+  </log4net>
+  
 </configuration>
