--- a/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
@@ -4,11 +4,35 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  
   <connectionStrings>
-    <add name="connStr" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=Store;Data Source=(LOCAL)" providerName="System.Data.SqlClient"></add>
+    <!--Colocar Connection String-->
+    <add name="connStr" connectionString="Server=JDSP103;Database=hakuten;Trusted_Connection=True;" />
   </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
-</configuration>
+
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="C:/Pessoal/logservice.txt"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="1MB"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.SimpleLayout"/>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+  </log4net>
+  
+</configuration>  
