--- a/Rakuten.Test/Rakuten.Test.Web/bin/Rakuten.Test.Web.dll.config
+++ b/Rakuten.Test/Rakuten.Test.Web/bin/Rakuten.Test.Web.dll.config
@@ -3,7 +3,27 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-<configuration>
+<configuration>  
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  <log4net>    
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">      
+      <file value="Logs//log.txt"/>
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">                
+        <conversionPattern value="%date [%thread] %level %logger - [%F] - [%M] - %message%newline" />
+      </layout>
+    </appender>
+    <logger name="LogFile">      
+      <level value="All" />      
+      <appender-ref ref="RollingFileAppender" />
+    </logger>
+  </log4net>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
