--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--Colocar Connection String-->  
+    <add name="connStr" connectionString="Data Source=.\SQL2014;Initial Catalog=RAKUTEN;Persist Security Info=True;User ID=sa;Password=sa123;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
