--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <!--Colocar Connection String-->  
+    <add name ="connStr"  connectionString="Data Source=JESSÉ;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlCliente" />  
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
