--- a/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
@@ -4,8 +4,57 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <log4net>
+    <!--Para logar no console https://logging.apache.org/log4net/log4net-1.2.13/release/sdk/log4net.Appender.ConsoleAppender.html-->
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="WARN" />
+        <levelMax value="ERROR" />
+      </filter>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] [%logger] %-5level %logger [%ndc] - %message%newline" />
+      </layout>
+    </appender>
+    <!--Para salvar em arquivo https://logging.apache.org/log4net/log4net-1.2.13/release/sdk/log4net.Appender.FileAppender.html-->
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="mylogfile.txt" />
+      <appendToFile value="false" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] [%logger] %level %logger - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="INFO" />
+        <levelMax value="FATAL" />
+      </filter>
+    </appender>
+    <!--Para gerenciar maximo e historico de arquivo https://logging.apache.org/log4net/log4net-1.2.13/release/sdk/log4net.Appender.RollingFileAppender.html-->
+    <appender name ="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="myRollingLogfile.txt"/>
+      <appendToFile value ="true" />
+      <rollingStyle value="Size" />
+      <maximumFileSize value="10MB" />
+      <maxSizeRollBackups value="5"/>
+      <staticLogFileName value ="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] [%logger] %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="INFO" />
+      <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="FileAppender"/>
+      <appender-ref ref="RollingFileAppender"/>
+    </root>
+  </log4net>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+  </startup>
   <connectionStrings>
-    <add name="connStr" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=Store;Data Source=(LOCAL)" providerName="System.Data.SqlClient"></add>
+    <add name ="connStr"  connectionString="Data Source=JESSÉ;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlCliente" />  
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
