--- a/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/bin/Rakuten.Test.WebService.dll.config
@@ -4,11 +4,33 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <section  name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  <log4net>
+
+    <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
+      <param name="File" value="Logs\\LogsAppp.log"/>
+      <param name="AppendToFile" value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n"/>
+      </layout>
+    </appender>
+
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+
+  </log4net>
   <connectionStrings>
-    <add name="connStr" connectionString="Integrated Security=SSPI;Persist Security Info=False;User ID=sa;Initial Catalog=Store;Data Source=(LOCAL)" providerName="System.Data.SqlClient"></add>
+    <add name="connStr"
+        connectionString="Data Source=DESKTOP-HU7R592;Initial Catalog=testerakuten;Persist Security Info=True;User ID=testerakuten;Password=123"
+        providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
 </configuration>
+
