--- a/Rakuten.Test/Rakuten.Test.WebService/Web.config
+++ b/Rakuten.Test/Rakuten.Test.WebService/Web.config
@@ -1,14 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-    <!--Colocar Connection String-->  
+    <add name="connStr" connectionString="Data Source=DESKTOP-I90FAG4\SQLEXPRESS;Initial Catalog=rakuten;Persist Security Info=True;User ID=rakuten;Password=c^#9lWuClSjA3GKqN3HV" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <!--
+    Para obter uma descrição das alterações do web.config, consulte http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    Os seguintes atributos podem ser definidos na marca <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.8"/>
+    <httpRuntime targetFramework="4.5"/>
   </system.web>
 </configuration>
